Fix units of ingredients not appearing in the database properly
Due to incorrect input ID's in the cocktail create form causing the
formatting function to not gather the input value.

--- a/templates/cocktail-create.html
+++ b/templates/cocktail-create.html
@@ -43,7 +43,7 @@
                                 <option value="ml">ml</option>
                                 <option value="tsp">tsp</option>
                                 <option value="dashes">dash/es</option>
-                                <option value="na">n/a</option>
+                                <option value="no unit">n/a</option>
                             </select>
 
                             <!--Name--> 
@@ -69,12 +69,12 @@
                                 pattern="^[0-9.]{0,5}$" maxlength="5" placeholder="12.5" aria-label="enter amount of ingredient" required>
                             
                             <!--Unit-->
-                            <select name="measurement-2" id="measurement-2" class="form-cocktail__input" aria-label="dropdown menu to select a unit type" required>
+                            <select id="ingredient-unit-2" name="ingredient-unit-2" class="form-cocktail__input" aria-label="dropdown menu to select a unit type" required>
                                 <option value="" disabled selected hidden>Unit</option>
                                 <option value="ml">ml</option>
                                 <option value="tsp">tsp</option>
                                 <option value="dashes">dash/es</option>
-                                <option value="na">n/a</option>
+                                <option value="no unit">n/a</option>
                             </select>
 
                             <!--Name-->
