--- a/templates/cocktail-create.html
+++ b/templates/cocktail-create.html
@@ -38,14 +38,8 @@
                                 pattern="^[0-9.]{0,5}$" maxlength="5" placeholder="25" aria-label="enter amount of main alcohol" required>
                             
                             <!--Unit-->    
-                            <select id="ingredient-unit-1" name="ingredient-unit-1" class="form-cocktail__input" required>
-                                <option value="" disabled selected hidden>Unit</option>
-                                <option value="ml">ml</option>
-                                <option value="tsp">tsp</option>
-                                <option value="dashes">dash/es</option>
-                                <option value="no unit">n/a</option>
-                            </select>
-
+                            <input type="text" id="ingredient-unit-1" name="ingredient-unit-1" class="form-cocktail__input form-cocktail__input--fixed" value="ml" readonly>
+                                
                             <!--Name--> 
                             <input type="text" id="ingredient-name-1" name="ingredient-name-1" class="form-cocktail__input" placeholder="Main Alcohol Name" 
                                 aria-label="enter name of main alcohol" required>
