--- a/templates/cocktail.html
+++ b/templates/cocktail.html
@@ -3,7 +3,19 @@
     <!--Cocktail Header-->
     <section class="cocktail-header">
         <h1 class="page-title inline-block">{{ cocktail.cocktail_name.title() }}</h1>
-        <i class="cocktail-header__bookmark far fa-bookmark inline-block"></i>
+
+        <!--Bookmark-->
+        <form id="bookmark" class="cocktail-header__bookmark-form" action="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" method="POST">
+            <input type="hidden" id="random" name="random" value="{{ range(1, 10000000) | random }}">
+            <button id="bookmark-submit" class="cocktail-header__bookmark-btn">
+                {% if bookmark == "false" %}
+                    <i class="cocktail-header__bookmark far fa-bookmark inline-block"></i>
+                {% else %}
+                    <i class="cocktail-header__bookmark fas fa-bookmark inline-block"></i>
+                {% endif %}
+            </button>
+        </form>
+        
         <div class="cocktail-header__star-rating">
             {% if cocktail.rating == 0 %}
                 No Rating
