--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                 <ul class="site-header__navbar">
                     <li><a href="{{ url_for('home') }}" id="home" class="nav-item">Home</a></li>
                     {% for alcohol in alcohol_categories %}
-                        <li><a href="{{ url_for('category', alcohol_name=alcohol.alcohol_name) }}" id="{{ alcohol.alcohol_name.lower() }}" class="nav-item">{{ alcohol.alcohol_name }}</a></li>
+                        <li><a href="{{ url_for('home', alcohol_name=alcohol.alcohol_name) }}" id="{{ alcohol.alcohol_name.lower() }}" class="nav-item">{{ alcohol.alcohol_name }}</a></li>
                     {% endfor %}
                 </ul>
                 <a class="btn-icon nav-item" href="#"><i class="fas fa-search"></i></a>
@@ -50,7 +50,7 @@
                     <div class="nav-dropdown__menu">
                         {% if session.user %} 
                             <a href="{{ url_for('profile') }}" class="nav-dropdown__menu-item"><i class="fas fa-user-circle"></i> Profile</a>
-                            <a href="{{ url_for('profile') }}" class="nav-dropdown__menu-item"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                            <a href="{{ url_for('logout') }}" class="nav-dropdown__menu-item"><i class="fas fa-sign-out-alt"></i> Logout</a>
                         {% else %}
                             <a href="{{ url_for('register') }}" class="nav-dropdown__menu-item">Register</a>
                         {% endif %}
