home: Fix bookmark form reloading to different page after submitting
Due to if an alcohol filter was selected the action attribute was
only set to target the unfiltered home template without setting the
alcohol filter as a variable. Causing all bookings marking on alcohol
filtered home pages to reload to the unfiltered home page.

--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,11 @@
                     {% for cocktail in cat.cocktails %}
                         <div class="rec-card card swiper-slide">
                             <!--Bookmark Form-->
-                            <form id="bookmark" class="rec-card__bookmark" action="{{ url_for('home') }}" method="POST">
+                            {% if alcohol %}
+                                <form id="bookmark" class="rec-card__bookmark" action="{{ url_for('home', alcohol_name=alcohol.alcohol_name) }}" method="POST">
+                            {% else %}
+                                <form id="bookmark" class="rec-card__bookmark" action="{{ url_for('home') }}" method="POST">
+                            {% endif %}
                                 <input type="hidden" id="random" name="random" value="{{ range(1, 10000000) | random }}">
                                 <input type="hidden" id="cocktail-id" name="cocktail-id" value="{{ cocktail._id }}">
                                 <button id="bookmark-submit" class="cocktail-header__bookmark-btn">
