cocktail: Update external links to open in new tab

--- a/templates/cocktail.html
+++ b/templates/cocktail.html
@@ -67,7 +67,7 @@
                 <div class="cocktail__affiliate">
                     <h3>Get What You Need</h3>
                     <p>Find a wide range of alcohol and mixers here:</p>
-                    <a class="bottom-mar" href="https://www.masterofmalt.com/">Master of Malt</a>
+                    <a class="bottom-mar" href="https://www.masterofmalt.com/" target="_blank">Master of Malt</a>
                 </div>
 
             </div>
@@ -91,7 +91,7 @@
                 <div class="cocktail__affiliate">
                     <h3>Missing a Tool</h3>
                     <p>Grab all the tools you need:</p>
-                    <a href="https://www.drinkstuff.com/products/cocktail-accessories.asp?nav=left">Drink Stuff</a>
+                    <a href="https://www.drinkstuff.com/products/cocktail-accessories.asp?nav=left" target="_blank">Drink Stuff</a>
                 </div>
             </div>
 
