--- a/templates/home.html
+++ b/templates/home.html
@@ -17,12 +17,12 @@
             </div>
         </div>
     </section>
-    {{ user_bookmarks}}
+    {{ user_bookmarks }}
     {% for cat in sort_cats %}
         <!--New Cocktails-->
         <section class="rec-carsousel">
             <div class="rec-carsousel__header">
-                    <h2 class="rec-carsousel__title inline-block">{{ cat.name }}</h2>
+                <h2 class="rec-carsousel__title inline-block">{{ cat.name }}</h2>
                 <!--Pagination-->
                 <div class="swiper-pagination inline-block"></div>
             </div>
@@ -31,51 +31,14 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     {% for cocktail in cat.cocktails %}
-                        <div class="rec-card card swiper-slide">
-                            <!--Bookmark Form-->
-                            {% if alcohol %}
-                                <form id="bookmark" class="rec-card__bookmark" action="{{ url_for('home', alcohol_name=alcohol.alcohol_name) }}" method="POST">
-                            {% else %}
-                                <form id="bookmark" class="rec-card__bookmark" action="{{ url_for('home') }}" method="POST">
-                            {% endif %}
-                                <input type="hidden" id="random" name="random" value="{{ range(1, 10000000) | random }}">
-                                <input type="hidden" id="cocktail-id" name="cocktail-id" value="{{ cocktail._id }}">
-                                <button id="bookmark-submit" class="cocktail-header__bookmark-btn">
-                                    {% if cocktail._id | string in user_bookmarks %}
-                                        <i class="cocktail-header__bookmark fas fa-bookmark inline-block"></i>
-                                    {% else %}
-                                        <i class="cocktail-header__bookmark far fa-bookmark inline-block"></i>
-                                    {% endif %}
-                                </button>
-                            </form>
-                            <img class="rec-card__img card-img-top" src="static/images/pornstar-martini.jpg" alt="#">
-                            <div class="rec-card__info card-body">
-                                <h5 class="rec-card__title">{{ cocktail.cocktail_name }}</h5>
-                                <div class="row">
-                                    <div class="rec-card__star-rating col-6">
-                                        <p>
-                                            {% if cocktail.rating == 0 %}
-                                                No Rating
-                                            {% else %}
-                                                {%  for i in range (0, cocktail.rating) %}
-                                                    <i class="fas fa-star"></i>
-                                                {% endfor %}
-                                            {% endif %}
-                                            ({{ cocktail.no_rating }})
-                                            {{ cocktail._id }}
-                                        </p>
-                                    </div>
-                                    <div class="rec-card__col col-6">
-                                        <a href="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="rec-card__cta cta">Make It</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {% include "rec-card.html" %}
                     {% endfor %}
                 </div>
                 <!--Navigation buttons-->
-                <div class="rec-carsousel__swiper-button swiper-button-prev"></div>
-                <div class="rec-carsousel__swiper-button swiper-button-next"></div>
+                <div class="rec-carsousel__btn-container">
+                    <div class="rec-carsousel__swiper-button swiper-button-prev"></div>
+                    <div class="rec-carsousel__swiper-button swiper-button-next"></div>
+                </div>
             </div>
         </section>
     {% endfor %}
