--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,8 +64,25 @@ ul {
     display: block;
 }
 
+.hidden {
+    display: none;
+}
+
 .center-text {
     text-align: center;
+}
+
+.grid-spacing {
+    height: 20px;
+    background-color: aqua;
+}
+
+.padding-top {
+    padding-top: 20px;
+}
+
+.no-padding {
+    padding: 0;
 }
 
 /*---------------------------Brand Colours--*/
@@ -89,7 +106,7 @@ ul {
 }
 
 .page-line--brand {
-    border-color:var(--brand-cta);
+    border-color: var(--brand-cta);
 }
 
 .page-line--fw {
@@ -132,6 +149,28 @@ ul {
 .cta--delete {
     background: red;
     color: white;
+}
+
+.cta--edit {
+    color: white;
+}
+
+.cta--link {
+    display: inline-block;
+    text-align: center;
+}
+
+.cta--profile {
+    font-size: 1.5rem;
+    min-width: 100%;
+}
+
+.cta--profile:nth-child(2) {
+    margin-top: 10px;
+}
+
+.cta--fw {
+    width: 100%;
 }
 
 .cta---greater {
@@ -433,12 +472,27 @@ ul {
 
 .rec-carsousel__swiper-button {
     height: 101%;
-    width: 150px;
-    top: 64%;
-    margin: -15px;
-    transform: translateY(-60%);
-    color: var(--brand-color);
+    position: static !important;
+    color: limegreen;
+    margin-top: 30px;
+    z-index: 10;
     font-weight: 800;
+    display: inline;
+}
+
+.rec-carsousel__btn-container {
+    text-align: center;
+    margin: 0px auto;
+    margin-top: 50px;
+}
+
+.rec-carsousel__filter-contianer {
+    width: 100%;
+    margin-bottom: 100px;
+}
+
+.swiper-button-disabled {
+    display: inline !important;
 }
 
 .swiper-container {
@@ -480,11 +534,11 @@ ul {
 }
 
 .swiper-button-prev {
-    background: linear-gradient(-90deg, rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255, 1) 100%);
+    margin-right: 20px;
 }
 
 .swiper-button-next {
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255, 1) 100%);
+    margin-left: 20px;
 }
 
 .swiper-button-next.swiper-button-disabled, 
@@ -492,12 +546,16 @@ ul {
     display: none;
 }
 
-/*------------------------------------------------------Product Card--*/
+/*------------------------------------------------------Recipe (Rec) Card--*/
 .rec-card {
-    background: purple;
     color: white;
     border: 0;
     border-radius: 7.5px;
+}
+
+.rec-card--profile {
+    margin-top: 30px;
+    max-width: 500px;
 }
 
 .rec-card__container {
@@ -519,17 +577,29 @@ ul {
    border-top-right-radius: 7.5px;
 }
 
-.rec-card__bookmark {
+.rec-card__bookmark-form {
     position: absolute;
     top: 10px;
     right: 10px;
     font-size: 3rem;
-    color: var(--brand-cta)
+}
+
+.rec-card__bookmark {
+    background: none;
+    border: none;
+    color: limegreen;
+}
+
+.rec-card__bookmark:focus {
+    outline: none;
 }
 
 .rec-card__info {
     width: 100%;
     padding: 20px 15px;
+    background: purple;
+    border-bottom-left-radius: 7.5px;
+    border-bottom-right-radius: 7.5px;
 }
 
 .rec-card__info p{
@@ -550,6 +620,10 @@ ul {
 
 .rec-card__cta {
     font-size: 1.5rem;
+}
+
+.rec-card__container {
+    margin-top: 17.5px;
 }
 
 /*------------------------------------------------------Profile--*/
@@ -584,11 +658,16 @@ ul {
     font-size: 1.5rem;
 }
 
+.profile-row {
+    margin: 0 auto;
+    width: 80%;
+}
+
 .profile__confirmation {
     margin-top: 20px;
 }
 
-/*------------------------------------------------------Cocktail--*/
+/*------------------------------------------------------Cocktail Recipe Page--*/
 .cocktail-header,
 .cocktail-body {
     width: 80%;
