--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Favicon-->
-    <link rel="icon" type="image/svg" href="../static/icons/favicon.svg"/>
+    <link rel="icon" type="image/svg" href="{{ url_for('static', filename='icons/favicon.svg')}}"/>
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--Font Awesome Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
     <!--Swiper-->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" type="text/css">
     <!--Local CSS-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
     {% block styles %}
     {% endblock %}
     <!--Title-->
@@ -49,7 +49,7 @@
                     </a>
                     <div class="nav-dropdown__menu">
                         {% if session.user %} 
-                            <a href="{{ url_for('profile') }}" class="nav-dropdown__menu-item"><i class="fas fa-user-circle"></i> Profile</a>
+                            <a href="{{ url_for('profile', profile_name=session.user, profile_id=session.id) }}" class="nav-dropdown__menu-item"><i class="fas fa-user-circle"></i> Profile</a>
                             <a href="{{ url_for('logout') }}" class="nav-dropdown__menu-item"><i class="fas fa-sign-out-alt"></i> Logout</a>
                         {% else %}
                             <a href="{{ url_for('register') }}" class="nav-dropdown__menu-item">Register</a>
@@ -97,7 +97,7 @@
                 <h4>Account</h4>
                 <ul class="footer__list">
                     {% if session.user %}
-                        <li><a href="{{ url_for('profile') }}">Profile</a></li>
+                        <li><a href="{{ url_for('profile', profile_name=session.user, profile_id=session.id) }}">Profile</a></li>
                         <li><a href="{{ url_for('logout') }}">Logout</a></li>
                     {% else %}
                         <li><a href="{{ url_for('login') }}">Login</a></li>
