--- a/templates/cocktail-create.html
+++ b/templates/cocktail-create.html
@@ -196,7 +196,7 @@
             <div class="row">
                 <div class="form-cocktail__submit col-12">
                     <!--Cancel Add Cocktail-->
-                    <a href="{{ url_for('profile') }}" class="cta cta--delete cta---lesser cta--submit">Cancel</a>
+                    <a href="{{ url_for('profile', profile_name=session.user, profile_id=session.id) }}" class="cta cta--delete cta---lesser cta--submit">Cancel</a>
                     
                     <!--Save as Draft-->
                     <input type="submit" class="cta cta---greater cta--submit" value="Save For Later">
