--- a/templates/cocktail.html
+++ b/templates/cocktail.html
@@ -28,7 +28,7 @@
             {% endif %}
             ({{ cocktail.no_rating }})
         </div>
-        <p class="cocktail-header__author"><a href="#">by <span class="cocktail-header__author">{{ cocktail.author }}</span></a></p>
+        <p class="cocktail-header__author"><a href="{{ url_for('profile', profile_name=cocktail.author, profile_id=cocktail.author_id) }}">by <span class="cocktail-header__author">{{ cocktail.author }}</span></a></p>
         <button class="cta cta--cocktail">Rate This Cocktail</button>
     </section>
 
