--- a/templates/base.html
+++ b/templates/base.html
@@ -38,15 +38,15 @@
                 </ul>
                 <a class="btn-icon nav-item" href="#"><i class="fas fa-search"></i></a>
                 <div class="nav-dropdown">
-                    <a class="nav-dropdown__btn btn-icon nav-item" href="{{ url_for('login') }}"><i class="nav-dropdown__profile fas fa-user-circle"></i>
-                        <span class="nav-dropdown__profile nav-dropdown__profile--username"> 
-                            {% if session.user %} 
-                                {{ session.user }}
-                            {% else %}
-                                Log In
-                            {% endif %}
-                        </span>
-                    </a>
+                    {% if session.user %}
+                        <a class="nav-dropdown__btn btn-icon nav-item" href="{{ url_for('profile', profile_name=session.user, profile_id=session.id) }}"><i class="nav-dropdown__profile fas fa-user-circle"></i>
+                            <span class="nav-dropdown__profile nav-dropdown__profile--username"> {{ session.user }}</span>
+                        </a>
+                    {% else %}
+                        <a class="nav-dropdown__btn btn-icon nav-item" href="{{ url_for('login') }}"><i class="nav-dropdown__profile fas fa-user-circle"></i>
+                            <span class="nav-dropdown__profile nav-dropdown__profile--username">Log In</span>
+                        </a>
+                    {% endif %}
                     <div class="nav-dropdown__menu">
                         {% if session.user %} 
                             <a href="{{ url_for('profile', profile_name=session.user, profile_id=session.id) }}" class="nav-dropdown__menu-item"><i class="fas fa-user-circle"></i> Profile</a>
